Thu Mar 24 15:43:14 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/numeric.c src/tds/numeric.pl:
	* src/tds/unittests/numeric.c:
	- change precision and scale of numeric together

Wed Mar 23 17:50:56 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/Makefile.am: fix distribution
	* src/tds/numeric.c: fix compile, remove ugly goto

Wed Mar 23 17:50:56 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/Makefile.am src/tds/numeric.c:
	* src/tds/unittests/Makefile.am:
	* src/tds/unittests/numeric.c(added):
	- scale numeric in a faster way
	* misc/test-auto.sh: updated, better output

Mon Mar 14 13:48:36 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: avoid infinite loop on cancel

Sun Mar 13 09:16:17 PST 2005	Peter Deacon <peterd@iea-software.com>
	* src/odbc/error.c: rank did not clear trans status

Sun Mar 13 11:21:40 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c:
	- make rank_errors static
	- change style
	* src/tds/net.c: int FAR have no sense in no pointer context

Sat Mar 12 01:23:17 PST 2005	Peter Deacon <peterd@iea-software.com>
	* include/tdsodbc.h src/odbc/error.c:
	- order messages by severity and type
	* include/tds_sysdep_private.h src/tds/util.c src/tds/login.c
	* src/tds/config.c:
	- fixed incorrect client process id on the windows platform
	* src/tds/query.c: include numeric characters in quote exception
	* src/tds/mem.c: native error to sqlstate mappings
	* src/tds/net.c: prevent infinite wait if socket connect fails

Sun Feb 27 09:47:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c:
	- make sure we don't core if server charset is not supported

Sat Feb 26 14:08:27 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/alternative_character_sets.h:
	* src/tds/character_sets.h src/tds/encodings.h:
	* src/tds/iconv.c src/tds/sybase_character_sets.h:
	- support for CP437 charset
