@@ -1,3 +1,9 @@
+Fri Mar 25 17:21:07 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* src/tds/convert.c:
+	- use new function to change scale/precesion
+	* src/tds/numeric.c:
+	- use asm to improve performance on Intel
+
 Thu Mar 24 15:43:14 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
 	* include/tds.h src/tds/numeric.c src/tds/numeric.pl:
 	* src/tds/unittests/numeric.c:
